plugins {
	id 'maven-publish'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'java'
}

group = 'com.vignesh'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.apache.httpcomponents:httpclient:4.5'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation "io.github.resilience4j:resilience4j-circuitbreaker:${resilience4jVersion}"
	implementation "io.github.resilience4j:resilience4j-ratelimiter:${resilience4jVersion}"
	implementation "io.github.resilience4j:resilience4j-retry:${resilience4jVersion}"
	implementation "io.github.resilience4j:resilience4j-bulkhead:${resilience4jVersion}"
	implementation "io.github.resilience4j:resilience4j-cache:${resilience4jVersion}"
	implementation "io.github.resilience4j:resilience4j-timelimiter:${resilience4jVersion}"
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
	testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
	compileOnly "org.projectlombok:lombok:${lombokVersion}"
	testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
}

test {
	useJUnitPlatform()
}
